# comic-text-separator

./: .gitignore  README.md  README_KR.md  main.py  pyproject.toml  requirements.txt
adapters/: detector.py  inpainter.py  kss_spacing.py  ocr_engine.py  textblock_mapper.py  textline_merger.py
comic_text_separator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
domain/: models.py  ports.py
engine/: __init__.py  config.py  detection.py  geometry.py  image_utils.py  inpainting.py  log.py  merger.py  model_manager.py  recognition.py  types.py
engine/nets/: aot.py  dbnet.py  ocr_net.py  xpos.py
gui/: app.py  main_window.py  styles.py  worker.py
infrastructure/: json_exporter.py  jsx_exporter.py  psd_exporter.py
scripts/: install-mac.command  install-win.bat  run-mac.command  run-win.bat
use_cases/: extract_text.py
